--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,7 +20,7 @@ jobs:
           filename: metrics.svg
           committer_message: "chore: update ${filename}"
           config_timezone: Europe/Paris
-          template: classic
+          template: organization
           base: header, activity, community, repositories, metadata
           config_order: base.header, base.repositories, base.activity+community, isocalendar, music
           output_condition: skip-if-only-metadata-changed
