--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,10 +17,11 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GH_TOKEN }}
+          user: ProjectRTSN
           filename: metrics.svg
           committer_message: "chore: update ${filename}"
-          config_timezone: Europe/Paris
-          template: organization
+          config_timezone: Asia/Shanghai
+          template: classic
           base: header, activity, community, repositories, metadata
           config_order: base.header, base.repositories, base.activity+community, isocalendar, music
           output_condition: skip-if-only-metadata-changed
